--- a/package.json
+++ b/package.json
@@ -9,13 +9,17 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@react-email/components": "^0.0.12",
+    "@react-email/tailwind": "^0.0.13",
     "clsx": "^2.1.0",
     "framer-motion": "^10.16.16",
     "next": "14.0.4",
     "react": "^18",
     "react-dom": "^18",
     "react-icons": "^4.12.0",
-    "react-intersection-observer": "^9.5.3"
+    "react-intersection-observer": "^9.5.3",
+    "resend": "^2.1.0",
+    "sonner": "^1.3.1"
   },
   "devDependencies": {
     "@types/node": "^20",
