--- a/package.json
+++ b/package.json
@@ -9,11 +9,13 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@formatjs/intl-localematcher": "^0.5.4",
     "@react-email/components": "^0.0.12",
     "@react-email/tailwind": "^0.0.13",
     "clsx": "^2.1.0",
     "country-flag-icons": "^1.5.9",
     "framer-motion": "^10.16.16",
+    "negotiator": "^0.6.3",
     "next": "14.0.4",
     "react": "^18",
     "react-dom": "^18",
@@ -23,6 +25,7 @@
     "sonner": "^1.3.1"
   },
   "devDependencies": {
+    "@types/negotiator": "^0.6.3",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
